gop/bravo/drupal-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-mysql-service
spec:
  ports:
  - port: 3306
  selector:
    name: drupal-mysql
