gop/bravo/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
spec:
  type: NodePort
  ports:
  - port: 80
#    name: http
    protocol: TCP
    nodePort: 30095
  selector:
    app: drupal
